<resources>
    <string name="app_name">GadgetZone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_guest">Login as Guest</string>
    <string name="registration">Registration</string>
    <string name="password_again">Password again</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="phone_number">Phone: +36 30 123 4567</string>
    <string name="address">Address: 1234 Main St, City, Country, ZIP code</string>
    <string name="gadgetzone">GadgetZone</string>
    <string name="delete">Delete</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="general_product_information">General product infromation</string>
    <string name="product_description">Product description</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="app_logo_icon">App Logo Icon</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_back">Go back</string>
    <string name="e_mail">E-mail</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="click_to_change_picture">Tap to change</string>
    <string name="email_change_info">You cannot change the email for your account.</string>
    <string name="save_profile_data">Save Profile Data</string>
    <string name="password_change_info">You can change your password here:</string>
    <string name="click_to_change">Click to change</string>
    <string name="username_label">Username: %1$s</string>
    <string name="phone_number_label">Phone number: %1$s</string>
    <string name="address_label">Address: %1$s</string>
    <string name="tap_to_change_data">Tap on the fields to change the data.</string>
    <string name="profile">Profile</string>
    <string name="cart_icon">Cart icon</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="product_image">Product Image</string>
    <string name="filter">Filter</string>
    <string name="_5_most_expensive_products">5 most expensive products</string>
    <string name="over_300_products">Over $300 products</string>
    <string name="empty_filters">Empty Filters</string>

    <string-array name="webshop_product_names">
        <item>Next-Generation Smartphone with AI</item>
        <item>High-Resolution Tablet</item>
        <item>Powerful Desktop PC</item>
        <item>Ultra-Lightweight and High-Performance Laptop</item>
        <item>Noise-Cancelling Headphones</item>
        <item>Energy-Efficient Air Conditioner</item>
    </string-array>

    <string-array name="webshop_product_information">
        <item>IPhone 12 - 5G Capable Smartphone with A14 Bionic Chip</item>
        <item>Ipad - 10.2-Inch Retina Display with A12 Bionic Chip</item>
        <item>Gaming PC set - High Performance Desktop with Latest Graphics Card</item>
        <item>HP Laptop - Portable Laptop with High-Speed Processor and Long Battery Life</item>
        <item>Sony Headphone - Noise-Cancelling Over-Ear Headphones with Deep Bass</item>
        <item>Philips Air Conditioner - Energy-Efficient Air Conditioner with Fast Cooling Technology</item>
    </string-array>

    <string-array name="webshop_product_quantity">
        <item>7</item>
        <item>13</item>
        <item>3</item>
        <item>42</item>
        <item>150</item>
        <item>23</item>
    </string-array>

    <array name="webshop_product_price">
        <item>1200 $</item>
        <item>400 $</item>
        <item>320 $</item>
        <item>260 $</item>
        <item>70 $</item>
        <item>700 $</item>
    </array>

    <array name="webshop_products">
        <item>@drawable/phone</item>
        <item>@drawable/tablet</item>
        <item>@drawable/pc</item>
        <item>@drawable/laptop</item>
        <item>@drawable/headphone</item>
        <item>@drawable/ac</item>
    </array>
</resources>