<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:onClick="onBackPressed"
            android:padding="10dp"
            android:text="@string/go_back"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_picture"
            android:onClick="changeProfilePicture"
            android:src="@drawable/default_profile_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/click_to_change_picture"
            android:textColor="#BCBCBC"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/e_mail"
            android:gravity="center"
            android:textColor="#74BAF8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/email_change_info"
            android:textColor="#EEFF00"
            android:textSize="12sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_info_marker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tap_to_change_data"
            android:textColor="#D5D3D3"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/profile_textview"
            android:clickable="true"
            android:contentDescription="@string/username"
            android:focusable="true"
            android:foreground="@drawable/textview_hover"
            android:minHeight="48dp"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/profile_textview"
            android:clickable="true"
            android:contentDescription="@string/phone_number"
            android:focusable="true"
            android:foreground="@drawable/textview_hover"
            android:minHeight="48dp"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/profile_textview"
            android:clickable="true"
            android:contentDescription="@string/address"
            android:focusable="true"
            android:foreground="@drawable/textview_hover"
            android:minHeight="48dp"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_change_info"
            android:textColor="#D5D3D3"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <EditText
            android:id="@+id/editTextPasswordAgain"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveProfileDataButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:onClick="saveUserProfile"
                android:text="@string/save_profile_data" />

            <Button
                android:id="@+id/deleteProfileButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:onClick="deleteUserProfile"
                android:text="@string/delete_profile" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
