<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activity_background"
        android:orientation="vertical"
        tools:context=".RegisterActivity">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:onClick="onBackPressed"
            android:padding="12dp"
            android:text="@string/go_back"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/general_textview_background"
            android:padding="16dp"
            android:shadowColor="#BB86FC"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="8"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#6200EE"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxWidth="488dp"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:maxWidth="488dp"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxWidth="488dp"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:maxWidth="488dp"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxWidth="488dp"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textMultiLine|textPostalAddress"
            android:maxWidth="488dp"
            android:maxLines="3"
            android:padding="12dp"
            android:textColor="#333333"
            android:textColorHint="#BF474747" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>